# lyricer

./: Cargo.toml  README.md
src/: lyric.rs  main.rs
