[package]
name = "lyricer"
version = "0.1.0"
authors = ["tony"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpris = "1.1"
urlencoding = "1.1"
log = { version = "0.4", features = ["release_max_level_error"] }
pretty_env_logger = "0.4"

[features]
default = ["multiline-lrc"]
multiline-lrc = []